# LeftOvers

./: .gitignore  LeftOvers.py  README.md  __init__.py  __main__.py  __version__.py  app_settings.py  pyproject.toml  req.txt  requirements-dev.txt  requirements.txt  setup.py  teste.txt
assets/: demo.cast
core/: __init__.py  cli.py  config.py  detection.py  helpers.py  result.py  scanner.py
tests/: conftest.py  test_detection.py  test_e2e.py  test_file_utils.py  test_http_utils.py  test_result.py  test_scanner.py  test_url_utils.py  test_validators.py
utils/: __init__.py  console.py  debug_utils.py  domain_generator.py  extension_optimizer.py  file_utils.py  http_handler.py  http_utils.py  logger.py  metrics.py  report.py  url_analyzer.py  url_utils.py  validators.py
