[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LeftOvers"
version = "1.2.6"
description = "An advanced scanner to find residual files on web servers"
readme = "README.md"
authors = [
    {name = "TheZakMan"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "rich>=13.4.2",
    "tqdm>=4.66.1",
    "urllib3>=2.0.4",
    "tldextract>=3.4.4",
    "pyOpenSSL>=23.2.0",
    "cryptography>=41.0.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["security", "scanner", "web", "pentest", "residual files", "backups"]

[project.scripts]
leftovers = "core.cli:main"

[project.urls]
"Homepage" = "https://github.com/thezakman/LeftOvers"
"Bug Tracker" = "https://github.com/thezakman/LeftOvers/issues"

[tool.setuptools]
packages = ["core", "utils"]
py-modules = ["LeftOvers", "app_settings", "__main__"]